--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -151,14 +151,20 @@
     font-feature-settings: 'liga';
 }
 
-/* @font-face kit by Fonts2u (https://fonts2u.com) */ 
+/* Font Awesome 5 Brands! -----*/ 
 @font-face {
-    font-family:'Font Awesome 5 Brands Regular';
-    src: url('fontAwesome5BrandsRegular/fa-brands-400.eot') format('eot');
-    src: local('Font Awesome 5 Brands Regular'),
-    url('fontAwesome5BrandsRegular/fa-brands-400.woff') format('woff'),
-    url('fontAwesome5BrandsRegular/fa-brands-400.ttf') format('truetype'),
-    url('fontAwesome5BrandsRegular/fa-brands-400.svg#FontAwesome5BrandsRegular') format('svg');
-    font-weight:normal;
-    font-style:normal;
-}
+    font-family: 'Font Awesome 5 Brands';
+    font-style: normal;
+    font-weight: 400;
+    font-display: block;
+    src: url("fontAwesome5Brands/fa-brands-400.eot");
+    src: url("fontAwesome5Brands/fa-brands-400.eot?#iefix") format("embedded-opentype"), 
+    url("fontAwesome5Brands/fa-brands-400.woff2") format("woff2"),
+    url("fontAwesome5Brands/fa-brands-400.woff") format("woff"),
+    url("fontAwesome5Brands/fa-brands-400.ttf") format("truetype"),
+    url("fontAwesome5Brands/fa-brands-400.svg#fontawesome") format("svg"); }
+  
+  .fab {
+    font-family: 'Font Awesome 5 Brands';
+    font-weight: 400; }
+  
