--- a/src/layouts/UI kit/Headers_Footers/headers_footers.scss
+++ b/src/layouts/UI kit/Headers_Footers/headers_footers.scss
@@ -1,7 +1,6 @@
 @import "../../../blocks/header/header";
 @import "../../../blocks/footer/footer";
 #headersFooters {
-    background-color: $darkShade_25;
     >div {
         margin-top: 41px; 
     }
